fixing spacing

--- a/popup.css
+++ b/popup.css
@@ -31,8 +31,8 @@ button:hover {
 } 
 #mainmenu-subtitle {
   color: white;
-  background-color: rgb(234,201,215);
-  padding-top: 2.5%;
+  background-color: rgb(234,201,215);/*
+  padding-top: 2.5%;*/
   padding-bottom: 2.5%;
   padding-left: 2.5%;
   padding-right: 2.5%;
